--- a/src/Starbender.RecipeApp/Components/Pages/Home.razor
+++ b/src/Starbender.RecipeApp/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
+@using Starbender.RecipeApp.Blazor.Components
 
 <PageTitle>Home</PageTitle>
-
+<h6>The UI is being updated, will make new commits shortly</h6>
 
