--- a/src/Starbender.RecipeApp/Components/_Imports.razor
+++ b/src/Starbender.RecipeApp/Components/_Imports.razor
@@ -11,4 +11,6 @@
 @using Starbender.RecipeApp.Components
 @using Starbender.RecipeApp.Components.Layout
 @using Starbender.RecipeApp.Services.Contracts
+@using Starbender.RecipeApp.Blazor.Components
+@using MudBlazor
 
