--- a/src/Starbender.RecipeApp/Components/Layout/MainLayout.razor
+++ b/src/Starbender.RecipeApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,10 @@
-﻿@inherits LayoutComponentBase
+﻿
+@inherits LayoutComponentBase
+
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
 <div class="page">
     <div class="sidebar">
