Added primitive UI

--- a/src/Starbender.RecipeApp.Blazor/Components/RecipeIngredientList.razor
+++ b/src/Starbender.RecipeApp.Blazor/Components/RecipeIngredientList.razor
@@ -1,6 +1,6 @@
 ﻿@using Starbender.RecipeApp.Services.Contracts.Dtos
 
-@inherits ComponentBase
+@inherits RecipeComponentBase
 
 <ul>
     @foreach (var item in Recipe.RecipeIngredients)
