--- a/src/Starbender.RecipeApp.Blazor/_Imports.razor
+++ b/src/Starbender.RecipeApp.Blazor/_Imports.razor
@@ -1,2 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
+@using Starbender.RecipeApp.Services.Contracts
+@using Starbender.RecipeApp.Services.Contracts.Dtos
