--- a/src/Starbender.RecipeApp.Blazor/Components/SeedButton.razor
+++ b/src/Starbender.RecipeApp.Blazor/Components/SeedButton.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@inherits RecipeComponentBase
+
 <MudButton 
     Variant="Variant.Filled" 
     Color="Color.Primary"
@@ -21,11 +22,11 @@
         {
             _isBusy = true;
             await Seeder.SeedAll();
-            StateHasChanged();
         }
         finally
         {
             _isBusy = false;
+            Snackbar.Add("Seeding Complete", Severity.Success);
         }
     }
 }
