--- a/src/Starbender.RecipeApp/Components/Layout/NavMenu.razor
+++ b/src/Starbender.RecipeApp/Components/Layout/NavMenu.razor
@@ -18,6 +18,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/recipes" Match="NavLinkMatch.All">
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Recipes
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
