--- a/src/Starbender.RecipeApp/Components/Pages/RecipesPage.razor
+++ b/src/Starbender.RecipeApp/Components/Pages/RecipesPage.razor
@@ -29,4 +29,9 @@
     {
         _isLoading = false;
     }
+    
+    private async Task HandleDialogSavedAsync(RecipeDto _)
+    {
+        //StateHasChanged();
+    }
 }
